# agency-agents

./: .env.template  .gitattributes  .gitignore  ATTRIBUTIONS.md  AUDIT_REPORT.md  AUDIT_VERIFICATION.md  CHANGELOG.md  CONSOLIDATE_AND_SYNC.ps1  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  CREATE_SHORTCUT.ps1  Dockerfile  EXTRACT_V33_BUNDLE.ps1  FINAL_PUSH_V27.ps1  FIX_KNOWN_BUGS.ps1  GODSKILL_CHAT.bat  INSTALL_AUTOSTART.cmd  INSTALL_AUTOSTART.ps1  JARVIS.md  JARVIS_BRAINIAC.py  JARVIS_BRAINIAC_COMPLETE_REPORT_v29.md  JARVIS_BRAINIAC_V25_REPORT.md  JARVIS_CAPABILITIES.md  JARVIS_COMMIT_PUSH.bat  JARVIS_DASHBOARD_PREVIEW.html  JARVIS_LAUNCH.ps1  JARVIS_OPEN.bat  JARVIS_PASS24_REPORT.md  JARVIS_PASS6_REPORT.md  JARVIS_PUSH_P10A.ps1  JARVIS_PUSH_P10B.ps1  JARVIS_PUSH_P10C.ps1  JARVIS_PUSH_P11.ps1  JARVIS_PUSH_P12.ps1  JARVIS_PUSH_P13.ps1  JARVIS_PUSH_P14.ps1  JARVIS_PUSH_P15.ps1  JARVIS_PUSH_P16.ps1  JARVIS_PUSH_P17.ps1  JARVIS_PUSH_P18.ps1  (+42 more)
JARVIS_OMEGA/: LAUNCH_OMEGA.bat  LAUNCH_OMEGA.ps1  LAUNCH_OMEGA.sh  MANIFEST.json  README.md  SINGULARITY_REPORT.md  VERIFICATION.json  omega.py  pyproject.toml  sources.json
JARVIS_OMEGA/godskill_navigation/: README.md
JARVIS_OMEGA/godskill_navigation/tier1_satellite/: README.md
JARVIS_OMEGA/godskill_navigation/tier2_indoor/: README.md
JARVIS_OMEGA/godskill_navigation/tier3_underwater/: README.md
JARVIS_OMEGA/godskill_navigation/tier4_denied/: README.md
JARVIS_OMEGA/godskill_navigation/tier5_fusion/: README.md
JARVIS_OMEGA/godskill_navigation/tier6_ai/: README.md
JARVIS_OMEGA/godskill_navigation/tier7_offline_data/: README.md
(+4509 files in other folders)
