[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-omega"
version = "1.0.0"
description = "Omega-SINGULARITY — Agency + JARVIS BRAINIAC v25 + KIMI Singularity unified runtime"
readme = "README.md"
authors = [{name = "Amjad Mobarsham", email = "mobarsham@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
omega = "omega:main"

[tool.setuptools]
py-modules = ["omega"]

[tool.setuptools.packages.find]
where = [".."]
include = ["runtime*", "jarvis_brainiac*"]
exclude = ["__pycache__*", "*.egg-info*", "tests*"]
